# erpnext_slovenia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/issue_templates/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
erpnext_slovenia/: add_bank_account.py  add_company_addr.py  debug_taxes.py  hooks.py  make_more_reports_standard.py  make_report_standard.py  modules.txt  register_report.py  setup.py  sync_report_filters.py  test_eslog.py  utils.py
erpnext_slovenia/accounting_integration/: accounting_integration.py
erpnext_slovenia/crm_si/: crm_si.py
erpnext_slovenia/edavki/: ddv_obracun_xml.py
erpnext_slovenia/einvoice/: einvoice.py
erpnext_slovenia/erpnext_slovenia/report/ddv_obračun/: __init__.py  ddv_obračun.js  ddv_obračun.json  ddv_obračun.py
erpnext_slovenia/erpnext_slovenia/report/ddv_vp/: ddv_vp.json
erpnext_slovenia/erpnext_slovenia/report/ddv_vp_letno_poročilo/: ddv_vp_letno_poročilo.js  ddv_vp_letno_poročilo.json  ddv_vp_letno_poročilo.py
erpnext_slovenia/erpnext_slovenia/report/letni_izkaz/: letni_izkaz.json  letni_izkaz.py
erpnext_slovenia/erpnext_slovenia/report/rač_letni_izkaz/: rač_letni_izkaz.js  rač_letni_izkaz.json
erpnext_slovenia/furs/: create_log_doctype.py  edavki_api.py
erpnext_slovenia/furs_blagajne/: furs_blagajne.py
erpnext_slovenia/mt940_si/: mt940_parser.py
erpnext_slovenia/multi_company/: multi_company.py
erpnext_slovenia/payment_codes/: payment_codes.py
erpnext_slovenia/payment_order/: payment_order.py
erpnext_slovenia/print_format/: slovenian_invoice.py
erpnext_slovenia/purchase_workflow/: purchase_workflow.py  setup_workflow.py
erpnext_slovenia/qr_image/: qr_image.py
erpnext_slovenia/srs/: srs_chart.py
erpnext_slovenia/upn_qr/: upn_qr.py
erpnext_slovenia/vies/: vies.py
