[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "erpnext_slovenia"
version = "0.2.0"
authors = [{ name = "Z.ai", email = "zai@example.com" }]
description = "Slovenian localization for ERPNext: e-Slog XML, DDV reports, FURS API, UPN QR, MT940, VIES, and more"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["frappe", "erpnext", "slovenia", "localization", "e-slog", "furs", "ddv", "vat", "qr", "mt940", "vies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "qrcode[pil]>=8.0",
    "Pillow>=9.0",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
furs = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/markec12345678/erpnext_slovenia"
Repository = "https://github.com/markec12345678/erpnext_slovenia"
Documentation = "https://github.com/markec12345678/erpnext_slovenia#readme"
"Bug Tracker" = "https://github.com/markec12345678/erpnext_slovenia/issues"
Changelog = "https://github.com/markec12345678/erpnext_slovenia/blob/main/CHANGELOG.md"

[tool.bench.frappe-dependencies]
frappe = ">=17.0.0-dev,<18.0.0"
erpnext = ">=17.0.0-dev,<18.0.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
indent-style = "tab"
